[package]
name = "hash-sig-example"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
hashsig = { git = "https://github.com/b-wagn/hash-sig.git" }
signature = "3.0.0-rc.4"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
